--- a/assets/css/_mixin.scss
+++ b/assets/css/_mixin.scss
@@ -16,28 +16,28 @@
 @mixin transform($value...) {
     -webkit-transform:$value;
     -moz-transform:$value;
-    -o-animation:$value;
+    -o-transform:$value;
     -ms-transform:$value;
     transform:$value;
 }
 @mixin transY-50{
     -webkit-transform:translateY(-50%);
     -moz-transform:translateY(-50%);
-    -o-animation:translateY(-50%);
+    -o-transform:translateY(-50%);
     -ms-transform:translateY(-50%);
     transform:translateY(-50%);
 }
 @mixin transX-50{
     -webkit-transform:translateX(-50%);
     -moz-transform:translateX(-50%);
-    -o-animation:translateX(-50%);
+    -o-transform:translateX(-50%);
     -ms-transform:translateX(-50%);
     transform:translateX(-50%);
 }
 @mixin translate-50{
     -webkit-transform:translate(-50%,-50%);
     -moz-transform:translate(-50%,-50%);
-    -o-animation:translate(-50%,-50%);
+    -o-transform:translate(-50%,-50%);
     -ms-transform:translate(-50%,-50%);
     transform:translate(-50%,-50%);
 }
@@ -63,9 +63,9 @@
     -o-animation:$value;
     animation:$value;
 }
-/* @mixin keyframes($name,$value...){
-    -webkit-@keyframes $name {$value};
-    -moz-@keyframes $name {$value};
-    -o-@keyframes $name {$value};
-    @keyframes $name {$value};
-} */
+@mixin keyframes($name){
+    @-webkit-keyframes #{$name}{@content;}
+    @-moz-keyframes #{$name}{@content;}
+    @-o-keyframes #{$name}{@content;}
+    @keyframes #{$name}{@content;}
+}
