--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -32,27 +32,33 @@ body{
     &:focus{left: 0;}
 }
 #header{
-    position: fixed;top: 0;left: 0;width: 100%;height: 96px;z-index:1000;
-    .logo a{position: absolute;top: 28px;left: 20px;font-size: 30px;background: #F9DCA2;width: 268px;height: 39px;line-height: 39px;font-weight: 400;text-align: center;}
+    position: absolute;top: 0;left: 0;width: 100%;height: 96px;
+    .logo a,.gnb_open_btn,.email{position: fixed;z-index:1000;}
+    .logo a{top: 28px;left: 20px;font-size: 30px;background: #F9DCA2;width: 268px;height: 39px;line-height: 39px;font-weight: 400;text-align: center;}
     .gnb_open_btn{
         @include bgsize(cover);
-        position: absolute;top: 18px;right: 80px;background: url("../images/icon/nav.svg") no-repeat center;width: 60px;height: 60px;
+        top: 18px;right: 80px;background: url("../images/icon/nav.svg") no-repeat center;width: 60px;height: 60px;
     }
     .email{
         @include transform(rotate(90deg));
         transform-origin: top right;
-        position: absolute;right: 20px;top: 260%;font-size: 16px;
+        right: 20px;top: 260%;font-size: 16px;
     }
 }
 .gnb{
     width: 100%;height: 100%;background: $navy;text-align: center;
+    .blob{
+        @include animation(move 10s ease-in-out infinite);
+        position: absolute;left: 0;width: 695px;height: 613px;
+    }
     li a{
         color: #ffffff;font-family: NtSansKR;font-weight: 700;font-size: 100px;width: 100%;
         &:hover,&:focus{text-decoration: underline;}
     }
 }
 #gnb{
-    display:none;position: fixed;top: 0;right: -100%;z-index: 10;
+    display:none;position: fixed;top: 0;right: -100%;z-index: 1100;
+    .blob{top: 0;}
     ul{
         @include translate-50;
         position: absolute;top: 50%;left: 50%;
@@ -65,11 +71,19 @@ body{
 }
 #footer{
     .link{
-        margin: 277px 0 80px;
+        margin: 277px 0 80px;text-align: center;
         a{
             font-size: 20px;
             &+a{margin-left: 150px;}
             &:hover,&:focus{text-decoration: underline;}
         }
     }
+}
+@include keyframes(move){
+    0%  {@include transform(scale(1) translate(10px, -30px));}
+    38% {@include transform(scale(0.8, 1) translate(80vw, 30vh) rotate(160deg));}
+    40% {@include transform(scale(0.8, 1) translate(80vw, 30vh) rotate(160deg));}
+    78% {@include transform(scale(1.3) translate(0vw, 50vh) rotate(-20deg));}
+    80% {@include transform(scale(1.3) translate(0vw, 50vh) rotate(-20deg));}
+    100%{@include transform(scale(1)   translate(10px, -30px));}
 }
