--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,16 +26,21 @@
     }
 }
 #cnt2{
-    .gnb{padding: 228px 0;}
+    .gnb{
+        padding: 228px 0;
+        .blob{top: 954.6px;}
+    }
     #indexGnb{
+        position: relative;
         li+li{margin-top: 90px;}
     }
 }
-#footer{
+#cnt3{
     text-align: center;
     p:nth-child(1){margin-top: 180px;}
     strong{display:block;font-size: 30px;font-weight: 400;background: #fff;width: 500px;border:5px solid #0BA9E9;background: #ffffff;padding: 56px 97.5px;margin: 90px auto 48px;}
 }
+
 @keyframes flower{
     100%{@include transform(rotate(360deg));}
 }
