--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,16 +4,23 @@
 //about me
 #me .tit,#skill .tit{font-family: hopang;font-size: 100px;}
 #me{
+    position: relative;top: 96px;
     .bg img{
         @include animation(rotate 60s linear infinite);
+        position: absolute;
+        &:nth-child(1){top: 44px;left: -122px;width: 450px;height: 450px;}
+        &:nth-child(2){top: 1040px;right: 358px;width: 89px;height: 89px;}
     }
-    .tit{margin: 0 0 132px 10px;}
-    .click1,.click2{font-size: 20px;color: $gray;}
+    .tit{margin: 68px 0 132px 10px;}
+    .click1,.click2{
+        @include animation(updown 1.5s infinite);
+        position: absolute;top: 240px;font-size: 20px;color: $gray;transform-origin: 50% 50%;
+    }
     .click1{
         @include transX-50;
-        position: absolute;top: 150px;left: 50%;
+        left: 50%;
     }
-    .click2{margin-bottom: 56px;margin-left: 218px;}
+    .click2{left: 340px;}
     
     .img_wrap{
         position: relative;width: 664px;height: 647px;background: $orange;z-index:1;
@@ -77,9 +84,7 @@
         }
     }
 }
-@keyframes rotate{
-    100%{@include transform(rotate(360deg));}
-}
+
 #skill{
     .tit_wrap{
         margin-bottom: 45px;
@@ -183,7 +188,7 @@
     }
     #jump{
         @include radius(100%);
-        position: absolute;width: 60px;height: 60px;left: 30px;bottom: 30px;background: $orange;font-size: 16px;text-align: center;line-height: 60px;cursor: pointer;
+        position: absolute;width: 60px;height: 60px;left: 30px;bottom: 30px;background: $orange;font-size: 16px;text-align: center;line-height: 60px;
     }
     .guide,.keyboard div{
         @include radius(5px);
@@ -249,10 +254,13 @@
         @include transY-50;
         position: absolute;left: 0;top: 50%;text-align: center;width: 778px;height: 507px;
 
-        .img{position: absolute;overflow: hidden;left: 0;bottom: 0;}
+        .img{
+            @include transX-50;
+            position: absolute;overflow: hidden;left: 50%;bottom: 0;
+        }
         .controller{
             @include transX-50;
-            position: absolute;top: 0;left: 50%;
+            position: absolute;top: 0;left: 50%;width: 100%;
             button{
                 position: relative;font-size: 20px;
                 &::after{
@@ -266,11 +274,18 @@
                     right: -32px;background: url("../images/icon/next.svg") no-repeat;width: 27px;height: 26px;
                 }
             }
+            .prev{
+                &::after{
+                    @include cover;
+                    left: -32px;background: url("../images/icon/prev.svg") no-repeat;width: 27px;height: 26px;
+                }
+            }
         }
     }
 }
 //info 
-#projectCnt .info{
+.info{
+    .tit{margin-top: 134px;}
     .tit+p,.subtit,.color>strong,.color>p,.font>strong,.font>p{text-align: center;}
     .tit+p{font-size: 20px;}
     .color>strong,.color>p,.font>strong,.font>p{color: $gray;}
@@ -305,15 +320,15 @@
             &::after{
                 @include transY-50;
                 @include cover;
-                content:"";position: absolute;top: 50%;right: -25px;width: 20px;height: 24px;background: url("../images/icon/v_icon.svg") no-repeat;
+                content:"";position: absolute;top: 50%;right: -25px;width: 22px;height: 23px;background: url("../images/icon/v_icon.svg") no-repeat;
             }
         }
         .flex{
             @include flex;
             justify-content: space-between;
-            div{position: relative;text-align: center;}
+            div{position: relative;text-align: center;width: 400px;}
         }
-        .bg{overflow: hidden;width: 400px;height: 500px;margin-bottom: 50px;}
+        .bg{overflow: hidden;/* width: 400px; */height: 500px;margin-bottom: 50px;}
         .circle{
             @include transX-50;
             @include radius(50%);
@@ -359,13 +374,18 @@
     }
 }
 
-.project{position: absolute;top: 1080px;left: 0;width: 100%;height: 960px;}
+.project{
+    position: absolute;top: 1080px;left: 0;width: 100%;height: 960px;
+    &,.prev,.next{color: #ffffff;}
+}
 #what,#kids{
     .w1400{height: 100%;}
 }
 
 #jaenung,#jaenung_info{background: $lightGray;}
 #jaenung{
+    z-index:3;
+    &,.prev,.next{color: $darkGray;}
     .w1400{height: 100%;}
     .img_wrap{
         .img{width: 778px;height: 389px;}
@@ -374,7 +394,7 @@
 }
 #jaenung_info{
     height: 2700px;
-    .tit{margin: 134px 0 87px;}
+    .tit{margin-bottom:87px;}
     .tit+p,.subtit,.color>strong,.color>p,.font>strong,.font>p{text-align: center;}
     .color>strong,.font>strong{display: block;}
     .design{
@@ -409,19 +429,87 @@
             }
         }
     }
-
+    .coding{
+        .left .circle{top: 30px;}
+        .mid .circle{top: 81px;}
+        .right .circle{top: 154px;}
+    }
     .sitego{bottom: 200px;}
 }
 
 #what,#what_info{background: $darkGray;}
 #what{
+    z-index:2;
+    .img_wrap{
+        width: 524px;height: 640px;top: 57%;
+        .img{width: 337px;height: 571.5px;}
+        .controller .prev{margin-right: 65px;}
+    }
+}
+#what_info{
+    &,.color>strong,.color>p,.font>strong,.font>p,.left .f_name,.right .f_name{color: #ffffff;}
+    .w1400{border: 1px solid gold;}
+    .tit{margin-bottom: 60px;}
+    .subtit+p{text-align: center;margin: 30px 0 190px;}
+    .color>strong::after,.font>strong::after{background: #ffffff;}
+    .color{
+        li{
+            &:nth-child(1){
+                @include boxsizing;
+                background: #282828;border: 2px solid #ffffff;
+            }
+            &:nth-child(2){background: #F6F4F4;color: $darkGray;}
+            &:nth-child(3){background: #44AEC6;}
+        }
+    }
+    .font{
+        margin-top: 200px;
+        &>div{
+            @include flex;
+            justify-content: space-between;text-align: center;
+        }
+        .left,.right{padding: 0 110px;}
+        .left{
+            .big,.small{font-family: cormorant;}
+            .big{color: #44AEC6;}
+            .small{color:#A8D1DB;}
+        }
+        .right{
+            .big,.small{font-family: poppins;}
+            .big{color:#ffffff;}
+            .small{color:#B8B8B8;}
+        }
+    }
+    .coding{
+        margin: 220px 0 650px;
+        .flex p{text-align: left;}
+    }
+    .sitego{bottom: 200px;}
 }
 
 #kids,#kids_info{background: #0252A6;}
 #kids{
+    z-index:1;
+    .txt{
+        width: 600px;
+        .text{margin-top: 136px;}
+    }
+    .img_wrap{
+        width: 718px;height: 537px;
+        .img{width: 718px;height: 449px;}
+    }
 }
 
-@keyframes cubeS{
+
+@include keyframes(rotate){
+    100%{@include transform(rotate(360deg));}
+}
+@include keyframes(updown){
+    0%{@include transform(scale(0.9) translateX(-50%));}
+    50%{@include transform(scale(1) translateX(-50%));}
+    100%{@include transform(scale(0.9) translateX(-50%));}
+}
+@include keyframes(cubeS){
     0%{
         @include transform(translateX(-50px) translateY(180px) rotate(0deg));
         width: 200px;height: 50px;
@@ -441,7 +529,7 @@
         width: 200px;height: 50px;
     }
 }
-@keyframes cubeL{
+@include keyframes(cubeL){
     0%{
         @include transform(translateX(-50px) translateY(180px) rotate(0deg));
         width: 400px;height: 100px;
@@ -461,7 +549,7 @@
         width: 400px;height: 100px;
     }
 }
-@keyframes flash{
-	from{opacity:0}
-	to{opacity:1}
+@include keyframes(flash){
+    0%{opacity:0}
+	100%{opacity:1}
 }
